modify jigsawpatterns in the dynamic registry on world load